fixed scrolling heading overlap problem

--- a/css/desktopStyle.css
+++ b/css/desktopStyle.css
@@ -41,10 +41,14 @@ html, body {
   text-align:center;
 }
 
+.imageContainer{
+  position:relative;
+}
+
 .floatBlock{
   position:absolute;
   height: 200px;
-  bottom: 40%;
+  bottom: 10%;
 }
 
 /* ================================================= */
@@ -59,6 +63,7 @@ html, body {
   text-align: center;
   font-size: 50px;
   background: white;
+  z-index: 10;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
